# daily_stock_analysis

./: .env.example  AGENTS.md  CLAUDE.md  QUICK_START.md  README_STREAMLIT.md  analyzer.py  config.py  main.py  market_analyzer.py  notification.py  pyproject.toml  requirements-complete.txt  requirements-streamlit.txt  run_dashboard.bat  run_dashboard.sh  run_streamlit.bat  run_streamlit.sh  scheduler.py  search_service.py  stock_analyzer.py  storage.py  streamlit_app.py  streamlit_dashboard.py  test_env.py
.github/workflows/: daily_analysis.yml
data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  tushare_fetcher.py  yfinance_fetcher.py
