# ===================================
# A股自选股智能分析系统 - 项目配置
# ===================================

[project]
name = "daily-stock-analysis"
version = "1.0.0"
description = "A股自选股智能分析系统 - AI驱动的股票分析工具"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Wang Liang", email = "your-email@example.com"},
]
keywords = ["stock", "analysis", "ai", "gemini", "a-share"]

# 从 requirements.txt 读取依赖
dependencies = [
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "sqlalchemy>=2.0.0",
    "schedule>=1.2.0",
    "akshare>=1.12.0",
    "tushare>=1.4.0",
    "baostock>=0.8.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.0",
    "requests>=2.31.0",
    "fake-useragent>=1.4.0",
]

[project.urls]
Repository = "https://github.com/your-username/daily_stock_analysis"

# ===================================
# Ruff 配置 (代码格式化 + 静态检查)
# ===================================

[tool.ruff]
# 目标 Python 版本
target-version = "py39"

# 行长度限制 (Black 默认值)
line-length = 88

# 排除的目录
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "logs",
    "reports",
    "data",
    "sources",
]

# 选择要启用的规则
lint.select = [
    "E",   # pycodestyle 错误
    "W",   # pycodestyle 警告
    "F",   # pyflakes
    "I",   # isort (导入排序)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (现代化语法)
]

# 忽略的规则 (根据项目需要调整)
lint.ignore = [
    "E501",  # 行太长 (由 format 处理)
    "B008",  # 不要在函数参数中使用可变默认值
    "UP007",  # 使用 X | Y 表示 Union (Python 3.10+)
]

# 自动修复
fix = true

# 显示被忽略的规则
show-fixes = true

# 输出格式
output-format = "full"

[tool.ruff.format]
# 代码格式化配置
quote-style = "double"  # 双引号
indent-style = "space"  # 空格缩进
line-ending = "lf"  # Unix 换行符

# 是否格式化字符串
docstring-code-format = true

[tool.ruff.lint.isort]
# 导入分组顺序
known-first-party = ["config", "storage", "data_provider", "analyzer", "notification", "search_service", "stock_analyzer", "market_analyzer", "scheduler"]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = true

# ===================================
# Black 配置 (可选，如果需要与 Black 保持一致)
# ===================================

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | logs
  | reports
  | data
  | sources
)/
'''

# ===================================
# isort 配置 (可选，如果单独使用 isort)
# ===================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["config", "storage", "data_provider", "analyzer", "notification", "search_service", "stock_analyzer", "market_analyzer", "scheduler"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
